--- a/assets/css/simple-sidebar.css
+++ b/assets/css/simple-sidebar.css
@@ -51,7 +51,7 @@
 	 
 }
 .page-content .subnav li a.active {
- 	color:#003399;
+ 	color:#CCCCCC;
 }
  
 .sidebar-nav li a:active, .sidebar-nav li a:focus {
