--- a/assets/docs.css
+++ b/assets/docs.css
@@ -1,315 +1,259 @@
 ﻿.navbar-toggle {
-    background-color: #f9f9f9;
-    background-image: none;
-    border: 1px solid rgba(0, 0, 0, 0);
-    border-radius: 4px;
-    float: right;
-    margin-bottom: 8px;
-    margin-right: 15px;
-    margin-top: 8px;
-    padding: 9px 10px;
-    position: relative;
+	background-color: #f9f9f9;
+	background-image: none;
+	border: 1px solid rgba(0, 0, 0, 0);
+	border-radius: 4px;
+	float: right;
+	margin-bottom: 8px;
+	margin-right: 15px;
+	margin-top: 8px;
+	padding: 9px 10px;
+	position: relative;
 }
-
 .icon-bar {
-    background-color: #563D7C;
+	background-color: #563D7C;
 }
-
-body,a{
-  color: #333333;
+body, a {
+	color: #333333;
 }
-
-#content{
-  border-radius: 0;
+#content {
+	border-radius: 0;
 }
-
-#header > .navbar{
-  margin-bottom: 0;
+#header > .navbar {
+	margin-bottom: 0;
 }
-
-#header ul.nav.navbar-nav{
-  float: right;
+#header ul.nav.navbar-nav {
+	float: right;
 }
-
-#logo{
-  display: block;
-  text-indent: -9999px;
-  background: url(logo.png) no-repeat;
-  width: 138px;
-  height: 34px;
-  margin: 7px 20px 0 0;
+#logo {
+	display: block;
+	text-indent: -9999px;
+	background: url(logo.png) no-repeat;
+	width: 138px;
+	height: 34px;
+	margin: 7px 20px 0 0;
 }
-
-#main-content{
-  background: white;
-  padding: 20px;
-  font-size:15px;
-
+#main-content {
+	background: white;
+	padding: 20px;
+	font-size:15px;
 }
-
-#main-content a{
- color:#4793c5; 
+#main-content a {
+	color:#4793c5;
 }
-
 #content .main p {
-   
-	 
 }
-
-#main-content > h2:first-child{
-  padding:70px 70px 70px 220px;
-  margin-bottom: 35px;
-  margin-top: 0;
-  background: #4793C5 url(docstitle.png) no-repeat 50px 70%;
-  color: white;
-  font-size: 37px;
-  font-family:Consolas, sans-serif;
+#main-content > h2:first-child {
+	padding:70px 70px 70px 220px;
+	margin-bottom: 35px;
+	margin-top: 0;
+	background: #4793C5 url(docstitle.png) no-repeat 50px 70%;
+	color: white;
+	font-size: 37px;
+	font-family:Consolas, sans-serif;
 }
-
-@media (max-width:991px){
-  #main-content > h2:first-child{
-    padding:20px;
-    background: #4793C5 ;
-     font-size: 30px;
-  }
-
-  #sidenavcontent .nav-label-color{
-    display: none;
-  }
-
-  #header ul.nav.navbar-nav{
-    float: none;
-  }
-
+ @media (max-width:991px) {
+#main-content > h2:first-child {
+	padding:20px;
+	background: #4793C5;
+	font-size: 30px;
 }
-
-#sidenav-menu{
-  overflow: hidden;
+#sidenavcontent .nav-label-color {
+	display: none;
 }
-
-#sidenav-menu:hover{
-  overflow-y: auto;
+#header ul.nav.navbar-nav {
+	float: none;
 }
-
-#sidenavcontent{
-  background: white;
-
 }
-
-#sidenav ul,
-#sidenav li{
-  margin: 0;
-  padding: 0;
-  list-style: none;
+#sidenav-menu {
+	overflow: hidden;
 }
-#sidenav li a{
-  display: block;
-  padding: 10px 20px;
+#sidenav-menu:hover {
+	overflow-y: auto;
 }
-#sidenav li li a{
-  padding-left: 40px;
+#sidenavcontent {
+	background: white;
 }
-
-#sidenav li a:hover,
-#sidenav li a:focus{
-  background-color: #E8E8E8;
+#sidenav ul, #sidenav li {
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
-
-#sidenav ul ul{
-  display: none;
+#sidenav li a {
+	display: block;
+	padding: 10px 20px;
 }
-
-#sidecell{
-  position: relative;
-  z-index: 9;
+#sidenav li li a {
+	padding-left: 40px;
 }
-
-
-
-
-#sidenav-menu  li a.active{
-  font-weight: bold;
-  text-decoration: underline;
-  position: relative;
+#sidenav li a:hover, #sidenav li a:focus {
+	background-color: #E8E8E8;
 }
-#sidenav-menu  li li a.active:before{
-    color: #111111;
-    content: "\e013";
-    display: block;
-    font-family: 'Glyphicons Halflings';
-    font-size: 8px;
-    left: 22px;
-    position: absolute;
-    top: 13px;
+#sidenav ul ul {
+	display: none;
 }
-
-#sidenav-menu  li.current .nav-title, #sidenav .nav-title.active{
-  background: #777;
-  color: white;
-  font-weight: bold;
+#sidecell {
+	position: relative;
+	z-index: 9;
 }
-
-#sidenav-menu  li.current .nav-title + ul{
-  display: block;
+#sidenav-menu li a.active {
+	font-weight: bold;
+	text-decoration: underline;
+	position: relative;
 }
-
-
-
-#select_holder{
-  padding: 20px;
-  text-align: center;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
-  display: none;
-  margin-top: -19px;
-  background: #f3f3f3;
-  border-bottom: 1px solid #ccc;
+#sidenav-menu li li a.active:before {
+	color: #111111;
+	content: "\e013";
+	display: block;
+	font-family: 'Glyphicons Halflings';
+	font-size: 8px;
+	left: 22px;
+	position: absolute;
+	top: 13px;
 }
-
-#sections-mobile-menu{
-  width: 100%;
-  min-width: 200px;
-  margin: auto
+#sidenav-menu li.current .nav-title, #sidenav .nav-title.active {
+	background: #777;
+	color: white;
+	font-weight: bold;
 }
-
-#sidenav.fixed{
-  position: fixed;
-  top: 20px;
+#sidenav-menu li.current .nav-title + ul {
+	display: block;
 }
-
-#main-content .subnav li{
-    font-size: 16px;
-    line-height: 2;
+#select_holder {
+	padding: 20px;
+	text-align: center;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+	display: none;
+	margin-top: -19px;
+	background: #f3f3f3;
+	border-bottom: 1px solid #ccc;
 }
-
-#main-content .subnav li a.active{
-   color:#CCCCCC; 
+#sections-mobile-menu {
+	width: 100%;
+	min-width: 200px;
+	margin: auto
 }
-#section-title h3{
-  padding: 17px;
-  margin: 0;
-  border-bottom: 1px solid #E8E8E8;
+#sidenav.fixed {
+	position: fixed;
+	top: 20px;
 }
-
-#search{
-  position: relative;
-  margin: 8px 0 0 20px;
+#main-content .subnav li {
+	font-size: 16px;
+	line-height: 2;
 }
-
-#search input{
-  float: right;
-  width: 100px;
-  padding-right: 40px;
-  -webkit-transition: width 0.2s ease-in-out;
-  -moz-transition: width 0.2s ease-in-out;
-  -o-transition: width 0.2s ease-in-out;
-  transition: width 0.2s ease-in-out;
+#main-content .subnav li a.active {
+	color:#CCCCCC;
 }
-#search input.xfocus{
-  width: 200px;
+#section-title h3 {
+	padding: 17px;
+	margin: 0;
+	border-bottom: 1px solid #E8E8E8;
 }
-
-#search .glyphicon{
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  color: #bbb;
-  display: block;
-  width: 14px;
-  height: 14px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  pointer-events:none;
+#search {
+	position: relative;
+	margin: 8px 0 0 20px;
 }
-#search.searching .glyphicon:before{
-  display:none;
+#search input {
+	float: right;
+	width: 100px;
+	padding-right: 40px;
+	-webkit-transition: width 0.2s ease-in-out;
+	-moz-transition: width 0.2s ease-in-out;
+	-o-transition: width 0.2s ease-in-out;
+	transition: width 0.2s ease-in-out;
 }
-#search.searching .glyphicon{
-  background-image: url(searchspin.GIF);
+#search input.xfocus {
+	width: 200px;
 }
-
-#search input.xfocus + .glyphicon{
-  color: #333;
+#search .glyphicon {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	color: #bbb;
+	display: block;
+	width: 14px;
+	height: 14px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: contain;
+	pointer-events:none;
 }
-#search_autocomplete{
-  position: absolute;
-  top:100%;
-  left: 0;
-  background: white;
-  box-shadow: 0 1px 1px 1px #ccc;
-  max-height: 250px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  display: none;
-  min-width: 100%;
+#search.searching .glyphicon:before {
+	display:none;
 }
-
-#search_autocomplete li, #search_autocomplete ul{
-  list-style: none;
-  margin: 0;
-  padding: 0;
+#search.searching .glyphicon {
+	background-image: url(searchspin.GIF);
 }
-#search_autocomplete li a{
-  display: block;
-  padding: 12px;
-  border-bottom: 1px solid #eee;
-  position: relative;
+#search input.xfocus + .glyphicon {
+	color: #333;
 }
-#search_autocomplete li:last-child a{
-  border-bottom: none
+#search_autocomplete {
+	position: absolute;
+	top:100%;
+	left: 0;
+	background: white;
+	box-shadow: 0 1px 1px 1px #ccc;
+	max-height: 250px;
+	overflow-x: hidden;
+	overflow-y: auto;
+	display: none;
+	min-width: 100%;
 }
-
-#search_autocomplete li a .label{
-  font-size: 10px;
-  line-height: 9px;
-  padding: 1px 4px;
-  position: absolute;
-  right: 3px;
-  top: 3px;
+#search_autocomplete li, #search_autocomplete ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
-
-#search_autocomplete li a.hover .label,
-#search_autocomplete li a:hover .label{
-  background:white;
-  color: #333;
+#search_autocomplete li a {
+	display: block;
+	padding: 12px;
+	border-bottom: 1px solid #eee;
+	position: relative;
 }
-
-#search_autocomplete li a.hover,
-#search_autocomplete li a:hover{
-  color: white;
-  background: #4793C5;
+#search_autocomplete li:last-child a {
+	border-bottom: none
 }
-
-.search-results-list-empty{
-  display: block;
-  padding: 12px;
-  color: #777;
+#search_autocomplete li a .label {
+	font-size: 10px;
+	line-height: 9px;
+	padding: 1px 4px;
+	position: absolute;
+	right: 3px;
+	top: 3px;
 }
-.search-results-list-empty em{
-  color: #333;
+#search_autocomplete li a.hover .label, #search_autocomplete li a:hover .label {
+	background:white;
+	color: #333;
 }
-
-@media (max-width:991px){
-  #search{
-    display: none;
-  }
-
+#search_autocomplete li a.hover, #search_autocomplete li a:hover {
+	color: white;
+	background: #4793C5;
 }
-
-
+.search-results-list-empty {
+	display: block;
+	padding: 12px;
+	color: #777;
+}
+.search-results-list-empty em {
+	color: #333;
+}
+ @media (max-width:991px) {
+#search {
+	display: none;
+}
+}
 .runner_output {
- max-height:300px;
- overflow:scroll;	
-	
+	 
+	max-height:500px;
+	overflow:scroll;
 }
-
 .code_runner_iframe {
- max-height:450px;
- overflow:scroll-x;
- width:100%;	
+	height:450px;
+	max-height:550px;
+	overflow:scroll-x;
+	width:100%;
 	border:none;
-
 }
-.code_runner_iframe_form{
-display:none;	
+.code_runner_iframe_form {
+	display:none;
 }
