--- a/assets/docs.css
+++ b/assets/docs.css
@@ -1,9 +1,9 @@
 ﻿body {
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 18px;
-	background-color: #efecec;
-    line-height: 1.6;
-    color: #413939;
+	background-color: #f2f2f2;
+	line-height: 1.6;
+	color: #413939;
 }
 *, *:before, *:after {
 	-moz-box-sizing: border-box;
@@ -13,19 +13,14 @@
 .sidebar .mw-ui-navigation a {
 	height: auto;
 }
-.sidebar {
-	padding-right: 50px;
-}
 .header {
 	font-weight: 100;
 	font-size: 14px;
 	position: relative;
 	z-index: 2;
-
 	margin: 0px;
 }
 .content {
-	max-width: 740px;
 }
 .header, .page-container {
 	max-width: 1100px;
@@ -59,8 +54,7 @@
 	text-decoration: none;
 	background-color: #216A98;
 }
-
-.content a:not([class]), .page-container .sidebar li a{
+.content a:not([class]), .page-container .sidebar li a {
 	color: #3383bb;
 	text-decoration: none;
 }
@@ -112,11 +106,10 @@ code {
 	background-color: #f9f2f4;
 	border-radius: 4px;
 	color: #c7254e;
-
 	padding: 2px 4px;
 }
 code, kbd, pre, samp {
-   /*	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;  */
+	/*	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;  */
    font-size: 16px;
 }
 .page-container table {
@@ -135,52 +128,213 @@ code, kbd, pre, samp {
 	margin: 0 0 1.1em;
 }
 .content .hljs {
-
- white-space:pre-wrap;	
+	white-space:pre-wrap;
 }
-
 .content img {
-    max-width: 100%;
+	max-width: 100%;
 }
-
-#autocomplete{
-  position: absolute;
-  top: 100%;
-  right: 30px;
-  padding: 10px;
-  background: white;
-  z-index: 9;
-  border: 1px solid #eee;
-  max-height: 300px;
-  width: 200px;
-  overflow: hidden;
-  box-shadow: 0 0 6px -4px #000;
+#autocomplete {
+	position: absolute;
+	top: 100%;
+	right: 30px;
+	padding: 10px;
+	background: white;
+	z-index: 9;
+	border: 1px solid #eee;
+	max-height: 300px;
+	width: 200px;
+	overflow: hidden;
+	box-shadow: 0 0 6px -4px #000;
 }
-
-#autocomplete a:hover,
-#autocomplete .hover a{
-  color: white;
-  background-color: rgba(51, 131, 187, 1);
+#autocomplete a:hover, #autocomplete .hover a {
+	color: white;
+	background-color: rgba(51, 131, 187, 1);
 }
-
-#autocomplete a{
-  color: rgba(65, 57, 57, 1);
-  display: block;
-  padding: 10px;
-  font-size: 16px;
-  border: none;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis
+#autocomplete a {
+	color: rgba(65, 57, 57, 1);
+	display: block;
+	padding: 10px;
+	font-size: 16px;
+	border: none;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis
 }
-
-#autocomplete small{
-  display: none;
+#autocomplete small {
+	display: none;
 }
-
-#autocomplete li{
-  float: none;
-  list-style: none
+#autocomplete li {
+	float: none;
+	list-style: none
 }
-
-
+.sidebar ul li:first-child {
+}
+.sidebar ul {
+	padding-bottom: 25px;
+}
+.sidebar li {
+	list-style: none
+}
+.sidebar li a {
+	color: #696969;
+	font-weight: 400;
+	display: block;
+	padding: 5px 0 5px 17px;
+	position: relative;
+}
+.sidebar {
+	padding-top: 0px;
+	padding-right: 0px;
+	padding-bottom: 20px;
+	padding-left: 0px;
+}
+.sidebar h3 {
+	color: rgba(71, 71, 71, 0.98);
+	font-size: 22px;
+	font-weight: 400;
+	text-transform: uppercase;
+}
+.sidebar .sidebar-content > ul > li {
+	padding-left: 15px;
+}
+.page-container {
+	border: 1px solid #e5e5e5;
+}
+.page-container a:hover, .page-container a:focus {
+	color: #4494c7;
+}
+.page-container a.active {
+	color: #4494c7;
+	text-decoration: none;
+	font-weight: bold;
+}
+.container {
+	padding-top: 15px;
+}
+.hljs {
+	padding: 25px;
+}
+.container .content {
+	font-size: 19px;
+}
+.container .content h1 + pre, .container .content h2 + pre, .container .content h3 + pre, .container .content h4 + pre, .container .content h5 + pre, .container .content h1 + p, .container .content h2 + p, .container .content h3 + p, .container .content h4 + p, .container .content h5 + p {
+	msssargin-bottom: 50px;
+}
+.sidebar li a.active:before {
+	content: "Ň";
+	font-size: 14px;
+	letter-spacing: 2px;
+	font-family: Microweber;
+	margin-right:10px;/*position: absolute;
+	top: 9px;
+	left: 2px;*/
+}
+.content > h2:first-child {
+	padding-bottom: 30px;
+	margin-bottom: 30px;
+	border-bottom: 1px solid #eee;
+}
+.content {
+	-webkit-transition: all 0.6s;
+	-moz-transition: all 0.6s;
+	-ms-transition: all 0.6s;
+	-o-transition: all 0.6s;
+	transition: all 0.6s;
+	position: relative;
+}
+.content.loading {
+	-webkit-transform: translateY(30px);
+	-moz-transform: translateY(30px);
+	-ms-transform: translateY(30px);
+	-o-transform: translateY(30px);
+	transform: translateY(30px);
+	opacity: 0;
+}
+.hljs-comment {
+}
+#autocomplete {
+	display: none;
+}
+.not-ready {
+	text-align:center;
+	font-size:14px;
+}
+.content {
+	color: rgba(41,41,41,1);
+	font-size: 1.4em;
+	line-height: 145%;
+	padding-bottom: 45px;
+	padding-left:45px;
+	padding-right:45px;
+}
+.content h1, .content h2, .content h3, .content h4 {
+	color: rgba(89,89,89,1);
+	display: block;
+	font-family:  Helvetica, sans-serif;
+	font-weight: 100;
+	margin-bottom: 0;
+	padding: 15px 25px;
+	padding-left:0px;
+	margin-top: 21px;
+}
+.content h1 {
+	font-size: 1.7em;
+	font-family: 'Fira Mono';
+}
+.content h2 {
+	font-size: 1.5em;
+	font-family: 'Fira Mono';
+}
+.content h3 {
+	font-size: 1.4em;
+}
+.content h4 {
+	font-size: 1.3em;
+}
+.content h5 {
+	font-size: 1.2em;
+}
+.content h6 {
+	font-size: 1.1em;
+}
+.sidebar-col {
+	border-right: 1px solid rgba(233,233,233,1);
+	box-shadow: 0 0 1px rgba(0,0,0,.07);
+	height:100%;
+	background: rgba(239, 237, 237, 0.42);
+}
+.sidebar .chapter-active {
+	background-color:white;
+	border-top-width: 1px;
+	border-right-width: 1px;
+	border-bottom-width: 1px;
+	border-left-width: 1px;
+	border-top-style: solid;
+	border-bottom-style: solid;
+	border-top-color: rgba(233,233,233,1);
+	border-bottom-color: rgba(233,233,233,1);
+}
+.sidebar a {
+	color:#333333 !important;
+}
+.sidebar ul h1 {
+	font-family: 'Fira Mono';
+	fodddnt-family: 'Source Code Pro', serif;
+	font-size:20px;
+	line-height: 150%;
+	list-style-type: none;
+	border-bottom:1px dashed #efecec;
+	margin-right:15px;
+	margin-left:15px;
+	margin-top: 0;
+	margin-bottom: 0;
+	padding-top: 35px;
+	padding-right: 30px;
+	padding-bottom: 15px;
+	padding-left: 0px;
+}
+a.anchor {
+	color:#efecec;
+	margin-left:5px;
+	text-decoration:none;
+}
