--- a/assets/docs.css
+++ b/assets/docs.css
@@ -317,7 +317,7 @@ code, kbd, pre, samp {
 .sidebar a {
 	color:#333333 !important;
 }
-.sidebar ul h1 {
+.sidebar ul h1, .sidebar h3 {
 	font-family: 'Fira Mono';
 	fodddnt-family: 'Source Code Pro', serif;
 	font-size:20px;
