--- a/assets/mw-ui/less/ui.less
+++ b/assets/mw-ui/less/ui.less
@@ -12,7 +12,7 @@
 
 @buttonColor: #ffffff;
 @invert:#262626;
-@info:#4494c7;
+@info:#0086db;
 @warn:#ef924d;
 @important:#c72943;
 @notification:#48ad79;
